<resources>
    <string name="app_name">"MyChatApp"</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="welcome_to_mychatapp">Welcome To MyChatApp</string>
    <string name="button">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
